Fix modal animation bugs on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -110,6 +110,7 @@ button {
     width: 100%;
     top: 0;
     left: 0;
+    border-radius: 0 0 5% 5%;
   }
   .theme_picker {
     display: flex;
